@startuml
hide circle
skinparam classAttributeIconSize 0

class BillController {
    - _billRepository: IBillRepository
    + GetBillByTableID(Guid id): Task<IActionResult>
}

interface IBillRepository<<interface>> {
    + GetBillByTableID(Guid id): Task<BillWithDetailsResponseDTO>
}

class BillRepository {
    - _billDao: BillDAO
    + GetBillByTableID(Guid id): Task<BillWithDetailsResponseDTO>
}

class BillDAO {
    - _client: Client
    + GetBillByTableID(Guid id): Task<BillWithDetailsResponseDTO>
}


class Bill {
    + Id: Guid
    + ReservationId: Guid
    + TotalAmount: decimal
    + ReceivedAmount: decimal
    + ChangeAmount: decimal
    + TableId: Guid
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + CustomerId: Guid
    + ShopId: Guid
}

class BillDetail {
    + Id: Guid
    + BillId: Guid
    + MenuItemId: Guid
    + Quantity: int
    + Price: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

BillController -- IBillRepository
IBillRepository <|.. BillRepository
BillRepository -- BillDAO
BillDAO -- Bill
BillDAO -- BillDetail

@enduml
